# nixops-vultr

./: .gitmodules  README.md  pyproject.toml
nixops_vultr/: plugin.py
nixops_vultr/backends/: instance.py  vultr.py
nixops_vultr/nix/: default.nix  droplet.nix  vultr.nix
tests/functional/: single_instance_base.nix  single_instance_test.py
